samples/_failures_safe/1761439168_ed2f4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_199ef2ac.c: In function ‘main’:
./samples/SAFE/__tmp_199ef2ac.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
